--- a/src/app/addressBook/less/addressBook.less
+++ b/src/app/addressBook/less/addressBook.less
@@ -10,6 +10,9 @@
 	a{
 		.font-spacing;
 	}
+	input.error, .errorCity {
+		border: 1px solid red !important;
+	}
 	.addressBook-container{
 		padding: 15px 0px 35px 0px;
 		.addressBook{
