--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -97,7 +97,7 @@ body, .container-fluid.home-template, .header, .footer, .buildOrder-plp, .custom
 	right:0;
 	top:0;
 	width:@width3;
-	z-index:9999;
+	z-index:9998;
 	.row {
 		height:auto;
 		width:@width3;
@@ -333,7 +333,7 @@ input[type=number]::-webkit-outer-spin-button {
 		display:block;
 		text-transform:uppercase;
 	    height: 38px;
-		padding: 12px 8px 9px 14px;
+		padding: 11px 8px 9px 12px;
 		color:@base-bg-purple-light;
 		i {
 			color:@base-bg-purple-light;
@@ -535,10 +535,18 @@ input[type=number]::-webkit-outer-spin-button {
 	height:auto;
 	/* overflow:auto; */
 	.view-cal{
+		a{
+			float:right;
+			font-size: 16px;
+			color: #8c58b5;
+			&:hover{
+				text-decoration-color:#8c58b5;
+			}
+			margin-right:15px;
+		}
 	  padding:0;
 	  margin-top:20px;
 		button{
-			float: right;
 		    font-family: "Helvetica-Bold";
 		    font-size: 16px;
 		    color: #8c58b5;
@@ -673,7 +681,7 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-right:1%;
 	padding:0px 15px;
 	width:19%;
-	height:220px;
+	height:206px;
 	position:relative;
 	h1 {
 		.helvetica-bold;
@@ -710,94 +718,31 @@ input[type=number]::-webkit-outer-spin-button {
 		width: 86%;
 	}
 	.more-details{
-		color: #afafaf;
-	  
-	    font-size: 10px;
-	    font-family: "Helvetica-Bold";
-	    margin: -10px 0 0 0;
-	    float: left;
 	    border-bottom: 1px solid #ccc;
 	    padding-bottom: 3px;
 	    width: 100%;
 	    margin-top: 2px;
-    	line-height: 20px;
-   		height: 20px;
+		height:1px;
 	}
 }
 
-.events-date{
+.promo-date{
 		width: 86%;
-	    margin: 0;
-	    float: left;
-	    position: absolute;
-	    bottom: 0px;
-	    height: 55px;
-	    .event-date{
-			 width: 30%;
-			line-height: 52px;
-			font-family: "Helvetica-Bold";
-			font-size: 10px;
-			position: relative;
-			float: left;
-			padding: 3px 0 0;
-			position: relative;
-			float: left;
-			top: 6px;
-		     .helvetica-bold;
-		     span{
-		     	.helvetica-bold;
-		     	font-size:10px;
-			    position: absolute;
-			    right: 0;
-			    left:0px;
-			    top:-9px;
-			    text-transform: uppercase;
-		     }
-		     span.event-day{
-				font-size: 10px;
-			    font-family: "Helvetica-regular";
-			    position: absolute;
-			    right: 0;
-			    left: 0;
-			    top:15px;
-			    color: #afafaf;	
-		   }
-	    }
-	 
-    		.event-time{
-    			     float: right;
-				    padding: 5px 0px 0 0;
-				    font-size: 10px;
-				    text-transform: uppercase;
-				    font-family: "Helvetica-regular";
-				    margin-top: 15px;
-			    span.events-countdown{
-				        width: 10px;
-					    height: 10px;
-					    float: left;
-					    position: relative;
-					    top: 2px;
-					    margin: 0 7px 0 0px;
-					    left: 1px;
-				    svg{
-			    	    fill: none;
-						stroke: #000;
-						margin-top: -1px;	
-				    }
-			    }
-			    span.events-cost{
-			    	font-size: 12px;
-			    	.helvetica-bold;
-    				text-align: right;
-    				margin-top:1px;
-			    }
-			    span{
-			    	 display: block;
-    				padding-top: 0;
-    				color: #a879cc;
-			    }
-    		}
-	  
+	    height: 40px;
+		margin-top:13px;	
+		svg{
+			width:20px;
+			height:20px;
+			fill:#91949b;
+			vertical-align:top;
+		}
+		.promo {
+			.in-block;
+			.helvetica-bold;
+			font-size:12px;
+			color:@color1;
+			margin-left:5px;
+		}
 	}
 
 .orders_table {
@@ -1456,7 +1401,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .footer {
 	background:@color1;
-	z-index:9999;
+	z-index:9998;
 	position: absolute;
 	bottom:0;
 	width:100%;
