--- a/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
@@ -3,7 +3,7 @@
 		<div class="buildOrder-order-summary-content">
 			<div class="order-info">
 				<h1>Active Order Summary</h1>
-				<div ng-repeat="line in buildordersummary.groups track by $index"><!--
+				<div ng-repeat="line in buildordersummary.activeOrders track by $index"><!--
 				<p>lineeeeee{{line}}</p><p>{{line}}</p>
 				<p>{{line[0].ShippingAddress}}</p> -->
 				<div class="order-header  row">
@@ -15,10 +15,9 @@
 								"></path>
 							</svg>
 						</span>
-						<p  ng-show="!isEditing">{{line[0].ShippingAddress.FirstName}} {{line[0].ShippingAddress.LastName}}</p>
-						 <input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.FirstName" placeholder="FirstName" />
-						 <input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.LastName" placeholder="LastName"/>
-						
+						<p ng-show="!isEditing">{{line[0].ShippingAddress.FirstName}} {{line[0].ShippingAddress.LastName}}</p>
+						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.FirstName" placeholder="FirstName" ng-blur="buildordersummary.GetDeliveryFees(line, 0)" />
+						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.LastName" placeholder="LastName" ng-blur="buildordersummary.GetDeliveryFees(line, 0)" />
 					</div>
 					<div class="col-xs-8 address">
 						<span>
@@ -33,13 +32,25 @@
 						<p ng-show="!isEditing">
 							{{line[0].ShippingAddress.Street1}} {{line[0].ShippingAddress.Street2}}, {{line[0].ShippingAddress.City}}, {{line[0].ShippingAddress.State}} {{line[0].ShippingAddress.Country}} {{line[0].ShippingAddress.Zip}}, {{line[0].ShippingAddress.Phone}}
 						</p>
-						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.Street1" placeholder="Street1" ng-blur="buildordersummary.getDeliveryCharges(line, 0)"/>
-						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.Street2" placeholder="Street2" ng-blur="buildordersummary.getDeliveryCharges(line, 0)"/>
-						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.City" placeholder="City"/>
+						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.Street1" placeholder="Street1" ng-blur="buildordersummary.GetDeliveryFees(line, 0)"/>
+						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.Street2" placeholder="Street2" ng-blur="buildordersummary.GetDeliveryFees(line, 0)"/>
+						<input type="text" ng-show="isEditing && (line[0].MultipleCities.length <= 1 || !line[0].MultipleCities)" ng-model="line[0].ShippingAddress.City" placeholder="City" />
+						<div ng-if="line[0].MultipleCities.length > 1 && isEditing" class="city-list">
+							<div uib-dropdown class="form-control " id="MultipleCities">
+								<div id="sort-dropdown" uib-dropdown-toggle>
+									<p class="sort-active-show" ng-init="line[0].ShippingAddress.City = 'Select City'">{{line[0].ShippingAddress.City}}</p>
+								</div>
+								<ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="sort-dropdown">
+									<li ng-repeat="city in line[0].MultipleCities" ng-click="buildordersummary.SelectedCity(city, line)"><a href="">{{city}}</a></li>
+								</ul>
+							</div>
+						</div>	
+						
 						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.State" placeholder="State"/>
 						<input type="text" ng-show="isEditing" ng-model="line[0].ShippingAddress.Country" placeholder="Country"/>
-						<input  ng-show="isEditing" ng-model="line[0].ShippingAddress.Zip" placeholder="Zip" ng-blur="buildordersummary.getDeliveryCharges(line, 0)" />
+						<input  ng-show="isEditing" ng-model="line[0].ShippingAddress.Zip" placeholder="Zip" ng-blur="buildordersummary.GetDeliveryFees(line, 0)" />
 						<input  ng-show="isEditing" ng-model="line[0].ShippingAddress.Phone" placeholder="Phone"/>
+						<span ng-if="buildordersummary.invalidAddress">Invalid Address/Zip</span>
 					</div>
 					<div class="col-xs-2 edit">
 						<button ng-click='isEditing = !isEditing' ng-show="!isEditing">
@@ -131,7 +142,7 @@
 								</svg>
 								</span> Edit Recipient</button>
 								
-				<button ng-click="buildordersummary.lineDtlsSubmit(line, 0); isEditing = !isEditing" ng-show="isEditing">Save Recipient</button>
+				<button ng-disabled="buildordersummary.invalidAddress" ng-click="buildordersummary.lineDtlsSubmit(line, 0); isEditing = !isEditing" ng-show="isEditing">Save Recipient</button>
 								
 					</div>
 				</div>
@@ -257,7 +268,7 @@
 </g>
 </svg>
 </span>Edit</button>
-<button ng-click="buildordersummary.lineDtlsSubmit(line, 0); isProEdit = !isProEdit" ng-show="isProEdit">Save</button>
+<button  ng-disabled="buildordersummary.invalidAddress" ng-click="buildordersummary.lineDtlsSubmit(line, 0); isProEdit = !isProEdit" ng-show="isProEdit">Save</button>
 														<button class="remove" ng-click="buildordersummary.deleteProduct(orderSummary)"><span>	<?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 128 128" height="128px" id="Layer_1" version="1.1" viewBox="0 0 128 128" width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M81.646,64l22.248-22.249c3.48-3.48,3.474-9.131-0.019-12.623l-5.006-5.005  c-3.489-3.49-9.142-3.499-12.622-0.019L64,46.354L41.753,24.106c-3.484-3.483-9.133-3.472-12.624,0.018l-5.005,5.005  c-3.491,3.492-3.501,9.14-0.018,12.623L46.354,64L24.108,86.246c-3.483,3.484-3.472,9.133,0.018,12.623l5.005,5.006  c3.492,3.492,9.14,3.502,12.623,0.018L64,81.647l22.247,22.246c3.48,3.481,9.131,3.475,12.622-0.019l5.006-5.006  c3.489-3.489,3.498-9.142,0.019-12.622L81.646,64z" fill="#232323"/></svg></span>Remove</button>
 													</li>
 												</ul>
@@ -1096,7 +1107,7 @@
 								<tr ng-if="line[0].xp.deliveryFeesDtls && line[0].xp.deliveryFeesDtls!={}">
 								<td colspan="5">
 								<div class="edit">
-									<button  ng-click="buildordersummary.EditSaveCharges(line)">
+									<button ng-disabled="buildordersummary.invalidAddress" ng-click="buildordersummary.EditSaveCharges(line)">
 							<span>
 							<?xml version="1.0" encoding="utf-8"?>
 								<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -1216,14 +1227,14 @@
 										<h5>{{key}}  </h5><span>{{val | currency}}</span>
 									 </div>
 									 <div>
-										<h5>Total Tax  </h5><span>{{line[0].TotalTax | currency}}</span>
+										<h5>Tax  </h5><span>{{line[0].TotalTax | currency}}</span>
 									 </div>
 									 <div ng-if="line[0].EditCharges" ng-repeat="(key, val) in line[0].xp.deliveryFeesDtls">
 										<h5>{{key}}  </h5>
 										<div class="edit-input"><input type="text" value="{{val}}" ng-model="line[0].xp.deliveryFeesDtls[key]" /></div>
 									 </div>
 									 <div>
-										<h5>Delivery </h5><span>{{line[0].xp.deliveryCharges | currency}}</span>
+										<h5>Shipping Cost </h5><span>{{line[0].xp.deliveryCharges | currency}}</span>
 									 </div>
 									  <div>
 										<h5>Subtotal</h5><span>{{line[0].TotalCost | currency}}</span>
