--- a/src/app/buildOrder/templates/buildOrder.plp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.plp.tpl.html
@@ -18,20 +18,21 @@
 </div> -->
 
 <!-- buildorder search starts -->
+<div cg-busy="{promise:buildOrder.PLPLoader,templateUrl:'common/loading-indicators/templates/view.loading.tpl.html'}"></div>
 <div class="oms_main_container" ng-show='showplp'>
 	<div ng-if="buildOrder.searchval.length > 0" ng-init="buildOrder.cleardata()">
 		<h1 ng-if="buildOrder.searchval.length > 0 && buildOrder.buildorderSearch.length != 0">Search Results for <span>"{{buildOrder.searchval}}"</span> <span class="count">({{buildOrder.buildorderSearch.length}} products)</span></h1>
-		<h1 ng-if="buildOrder.buildorderSearch.length == 0">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
+		<h1 ng-if="buildOrder.buildorderSearch.length == 0 && buildOrder.searchval.length > 0">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
 		<ul class="plp-container">
 			<li class="col-md-3" ng-repeat="products in buildOrder.buildorderSearch track by $index" ng-if="buildOrder.searchval.length > 0" >
 				<div class="plp-block" ng-click="buildOrder.prouctsList(products)">
 					<div class="product_img">
-						<img ng-model="prodImage" ng-src= "{{products.baseImage}}"/>
+						<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{products.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 					</div>
 					<div class="plp-product-data">
 						<h2>{{products.Name}}</h2>
-						<h3>Size {{products.Size}}</h3>
-						<h4>Color {{products.Color}}</h4>
+						<h3>Size <span>{{products.Size}}</span></h3>
+						<h4>Color <span>{{products.Color}}</span></h4>
 					</div>
 					<div class="price_lst">
 						<h5>{{products.Price | currency}}</h5>
@@ -49,12 +50,12 @@
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
-							<img ng-model="prodImage" ng-src= "{{prod.baseImage}}"/>
+							<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{prod.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color {{prod.Color}}</h3>
-							<h4>Size {{prod.Size}}</h4>
+							<h3>Color <span>{{prod.Color}}</span></h3>
+							<h4>Size <span>{{prod.Size}}</span></h4>
 						</div>
 						<div class="price_lst">
 							<h5 class="Price">{{prod.Price | currency}}</h5>
@@ -64,21 +65,21 @@
 			</li>
 		</ul>
 	</div>
-	<!-- product Searched results based on sequence number -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'Products' &&  buildOrder.searchval.length == 0 && buildOrder.searchSeqList.length>0">
-		<h1 ng-if="buildOrder.searchSeqList.length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchSeqList.length}} products)</span></h1>
-		<h1 ng-if="buildOrder.searchSeqList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1>
+	<!-- direct pdp- product Searched results based on sequence number -->
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'PDP' &&  buildOrder.searchval.length == 0 && buildOrder.searchSeqList.length>0">
+		<!-- <h1 ng-if="buildOrder.searchSeqList.length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchSeqList.length}} products)</span></h1> -->
+		<!-- <h1 ng-if="buildOrder.searchSeqList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
 			<li class="col-md-3" ng-repeat="prod in buildOrder.searchSeqList track by $index">
 				<div class="plp-block">
-					<div ng-click="buildOrder.productsseqList(prod)">
+					<div ng-click="buildOrder.showProduct(prod)">
 						<div class="product_img">
-							<img ng-model="prodImage" ng-src= "{{prod.baseImage}}"/>
+							<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{prod.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color {{prod.xp.SpecsOptions.Color}}</h3>
-							<h4>Size {{prod.xp.SpecsOptions.Size}}</h4>
+							<h3>Color <span>{{prod.xp.SpecsOptions.Color}}</span></h3>
+							<h4>Size <span>{{prod.xp.SpecsOptions.Size}}</span></h4>
 						</div>
 						<div class="price_lst">
 							<h5 class="Price">{{prod.StandardPriceSchedule.PriceBreaks[0].Price | currency}}</h5>
@@ -90,19 +91,19 @@
 	</div>
 	<!-- category Product List starts -->
 	<div class="home-search-list" ng-if="buildOrder.searchType == 'plp' &&  buildOrder.searchval.length == 0 && buildOrder.catList.length>0">
-		<!-- <h1 ng-if="buildOrder.searchSeqList.length > 0">Products under the category<span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchSeqList.length}} products)</span></h1> -->
+		<h1 ng-if="buildOrder.catList.length > 0">Products under the category <span>"{{buildOrder.catList[0].Category}}"</span> <span class="count">({{buildOrder.catList.length}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.catList.length == 0">No Products found</span></h1> -->
 		<ul class="plp-container">
 			<li class="col-md-3" ng-repeat="prod in buildOrder.catList track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
-							<img ng-model="prodImage" ng-src= "{{prod.baseImage}}"/>
+							<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{prod.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color {{prod.Color}}</h3>
-							<h4>Size {{prod.Size}}</h4>
+							<h3>Color <span>{{prod.Color}}</span></h3>
+							<h4>Size <span>{{prod.Size}}</span></h4>
 						</div>
 						<div class="price_lst">
 							<h5 class="Price">{{prod.Price | currency}}</h5>
