--- a/src/app/custInfo/less/custInfo.less
+++ b/src/app/custInfo/less/custInfo.less
@@ -367,6 +367,23 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 			}
 		}
 	}
+	.corporate-info{
+		p{
+			margin:10px 0 5px 0;
+		}
+		p.sub-addr{
+			margin:2px 0;
+		}
+		.left{
+			width:30%;
+			.in-block;
+			vertical-align:top;
+		}
+		.right{
+			width:30%;
+			.in-block;
+		}
+	}
 }
 .change-pwd.modal-pop-up{
 	.modal-dialog{
@@ -376,6 +393,10 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 			input{
 				padding:0;
 			}
+			label{
+				margin:12px 0 2px 0;
+			}
+			/*
 			.form-control.dropdown{
 				background-repeat: no-repeat !important;
 				background-position: right center !important;
@@ -387,7 +408,6 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 				background-repeat: no-repeat;
 				background-position: right center;
 				background-size: 35px 12px;
-				background: @color23;
 				.helvetica-bold;
 				height: 50px;
 				color: #333333;
@@ -463,6 +483,7 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
                 }
                
             }
+			*/
 		}
 		.modal-content{
 		 .modal-header{
