--- a/src/app/login/templates/login.tpl.html
+++ b/src/app/login/templates/login.tpl.html
@@ -1,4 +1,4 @@
-<div class="login container-fluid">
+<div class="login container-fluid" cg-busy="{promise:login.LoginSubmit,templateUrl:'common/loading-indicators/templates/view.loading.tpl.html'}">
 
 
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 login-left">
