--- a/src/app/orderClaim/less/orderClaim.less
+++ b/src/app/orderClaim/less/orderClaim.less
@@ -2,20 +2,14 @@
 	padding:0px 0 0 0;
 	.helvetica-regular;
 	background:#fff;
-	.custom-details{
-		    background: #f1f1f1;
-    		padding: 20px 30px;
-    		font-size: 20px;
-    		margin: 30px 0px;
-    		.custom{
-    			.helvetica-bold;
-    			color:#8c58b5;
-    		}
-    		.custom-name{
-    		   .helvetica-regular;
-    		       font-size: 17px;
-   				 margin-left: 10px;
-    		}
+	.order-claim-container{
+		position:absolute;
+		top:0px;
+		bottom:0px;
+		width:100%;
+		overflow-x:hidden;
+		overflow-y:auto;
+		background-color:@color0;
 	}
 	.adress-details{
 		background: #f5f5f5;
@@ -23,7 +17,14 @@
     	width: 32%;
     	padding: 10px;
     	font-size: 14px;
-    	.helvetica-bold;
+		span{
+			font-size:12px;
+			.helvetica-bold;
+		}
+		pull-right{
+			.helvetica-regular;
+			font-size:12px;
+		}
     	color:#333;
 		 div{
 		 	padding:0px;
@@ -35,7 +36,7 @@
 	.custom-info{
 		.table{
 		.thead-default{
-			background:#e6e6e6;
+			background:#f5f5f5;
 			.helvetica-bold;
 		}
 		.select-module{
@@ -80,6 +81,7 @@
 					 position: relative;
 				    top: 10px;
 				    height:200px;
+					padding-right:0;
 				    width: 22%;
 				 	.product-img{
 			    	 background: #ccc;
@@ -90,6 +92,8 @@
 			.pro-details{
 				   p{
 				   	   margin:0px;
+					   .helvetica-regular;
+					   font-size:12px;
 				   }
 				h1{
 					font-size:15px;
@@ -99,6 +103,7 @@
 				.delivery-date{
 					margin: 5px 0px !important;
     				.helvetica-bold;
+					font-size:12px;
 				}
 				.view{
 					text-decoration: underline;
@@ -136,6 +141,7 @@
 					width:15px;
 					height:15px;
 					margin-right:3px;
+					fill:@primary-dark-color;
 				}
 				input{
 					width:94%;
@@ -149,11 +155,18 @@
 				    padding: 1px 14px;
 				    text-transform: capitalize;
 				    margin-top: 10px;
+					.background-fade;
+					&:hover{
+						background-color:@primary-dark-color;
+					}
 				}
 			}
 			.delivery{
 				.helvetica-bold;
 				 font-size: 20px
+			}
+			th{
+				border-bottom:none;
 			}
 			td,th{
 				padding: 8px 14px;
@@ -177,27 +190,49 @@
     			padding-bottom:5px;
     			.claim-content{
     				table{
-					    border: 1px solid #ccc !important;
+					    border: 1px solid #eaeaea !important;
 					}
 				}
     		}
 		}
 	}
-	.claim-edit{
-		    background: #000;
-		    float: left;
-		    width: 100%;
-		    color: #fff;
-		    .cancel-claim {
-		    float: left;
-		    padding: 5px 40px;
-		    border-right: 1px solid #fff;
-						}
-		.continue-claim{
-			 background: #969292;
-			float: right;
-			padding: 5px 80px;
-
+}
+.custom-details{
+		background: #f1f1f1;
+		padding: 20px 30px;
+		font-size: 20px;
+		margin:0 0 30px 0px;
+		.custom{
+			.helvetica-bold;
+			color:#8c58b5;
+		}
+		.custom-name{
+		   .helvetica-regular;
+			   font-size: 17px;
+			 margin-left: 5px;
+		}
+}
+.claim-edit{
+		background: #000;
+		float: left;
+		width: 100%;
+		color: #fff;
+		.cancel-claim {
+			float: left;
+			padding: 5px 40px;
+			border-right: 1px solid #fff;
+			.background-fade;
+			&:hover{
+				background-color:@primary-dark-color;
+			}
+		}
+	.continue-claim{
+		 background: #969292;
+		float: right;
+		padding: 5px 80px;
+		.background-fade;
+		&:hover{
+			background-color:@primary-dark-color;
 		}
 	}
 }
