--- a/src/app/orderClaim/templates/orderClaimFooter.tpl.html
+++ b/src/app/orderClaim/templates/orderClaimFooter.tpl.html
@@ -1,6 +1,8 @@
-<div class="container-fluid order-claim-page">
+<div class="footer">
 	<div class="claim-edit">
-		<div class="cancel-claim">Cancel Claim </div>
-		<div class="continue-claim" ng-disabled="orderClaim.orderclaimarr.length < 1" ng-click="orderClaim.orderclaimarr.length < 1 || orderClaim.completeclaim(orderClaim.orderID)">Complete Claim</div>
+		<div class="cancel-claim">Cancel Claim</div>
+		<!-- <div class="continue-claim" ng-click="orderClaim.orderclaimarr==null || orderClaim.completeclaim(orderClaim.orderID)" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Complete Claim</div> -->
+		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Continue</div>
+		<div class="continue-claim" ng-show="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.completeclaim(orderClaim.orderID)">Complete Claim</div>
 	</div>
 </div>
