--- a/src/app/orderClaim/templates/orderClaimHead.tpl.html
+++ b/src/app/orderClaim/templates/orderClaimHead.tpl.html
@@ -1,4 +1,4 @@
-<div class="container-fluid order-claim-page">
+<div>
 	<div class="custom-details">
 		<span class="custom">Order Claim Summary for: </span>
 		<span class="custom-name">{{orderClaim.uname}}, Order # {{orderClaim.orderID}}</span>
