--- a/src/app/orderClaim/templates/orderClaimSummary.tpl.html
+++ b/src/app/orderClaim/templates/orderClaimSummary.tpl.html
@@ -67,7 +67,7 @@
 			<span>$3.34</span>
 		</div>
 		<div>
-			<span>Total Refund back to Visa Ending in 3452</span>
+			<span>Total Refund</span>
 			<span>$63.33</span>
 		</div>
 	</div>
