--- a/src/app/orderConfirmation/templates/orderConfirmation.tpl.html
+++ b/src/app/orderConfirmation/templates/orderConfirmation.tpl.html
@@ -1,3 +1,4 @@
+<div id="orderConfirmationTopNav" ui-view="orderConfirmationtop"></div>
 <div class="container-fluid orderConfirmation-Wrap">
 	<div class="col-lg-12 col-md-12 orderConfirm">
 		<p class="orderConfirm-title">Order Successfully Placed</p>
