--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -9,10 +9,12 @@
 	.order-history {
 		h5 {
 			overflow: hidden;
-			font-size:17px;
+			font-size:20px;
+			.helvetica-bold;
 			.order-header {
 				line-height: 2;
 				.helvetica-bold;
+				color:@primary-dark-color;
 			}
 			.create-claim {
 				float: right;
@@ -40,7 +42,6 @@
 				.ui-grid-canvas .ui-grid-row .ui-grid-cell:last-child{
 					background-color:@color20;
 					.background-fade;
-					float:right;
 					&:hover{
 						background-color:@primary-dark-color;
 						button{
