--- a/src/app/base/templates/base.down.tpl.html
+++ b/src/app/base/templates/base.down.tpl.html
@@ -8,7 +8,7 @@
         </ul>
     </div>
 </div> -->
-<div class="footer" ng-hide="application.headerstat">
+<div class="footer" ng-hide="application.footerstat">
 	<ul>
 		<li><a ui-sref="staticPage.about">About Us</a></li>
 		<li><a ui-sref="staticPage.termsConditions">Terms &amp; Conditions</a></li>
@@ -16,6 +16,14 @@
 		<li><a ui-sref="staticPage.contact">Contact Us</a></li>
 	</ul>
 	<p>© 2016 Bachman's, Inc.</p>
+</div>
+<div class="container-fluid order-claim-page footer" ng-hide="application.orderclaimfooterstat">
+	<div class="claim-edit">
+		<div class="cancel-claim">Cancel Claim</div>
+		<!-- <div class="continue-claim" ng-click="orderClaim.orderclaimarr==null || orderClaim.completeclaim(orderClaim.orderID)" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Complete Claim</div> -->
+		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Continue</div>
+		<div class="continue-claim" ng-show="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.completeclaim(orderClaim.orderID)">Complete Claim</div>
+	</div>
 </div>
 <!-- <div class="build-order-footer" ng-show="application.headerstat">
 	<div class="cancel-order">
