--- a/src/app/custInfo/templates/custInfo.tpl.html
+++ b/src/app/custInfo/templates/custInfo.tpl.html
@@ -2,8 +2,12 @@
 	<div class="cust-info-container row">
 		<div class="col-sm-6 col-xs-6 col-md-6 col-lg-6">
 			<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" ng-init="readStatus=true">
-				
-				<h1>PERSONAL INFORMATION <button ng-click="custInfo.editAddress(custInfo.list.user.Phone);isEditing = !isEditing" ng-show="!isEditing">EDIT</button></h1>
+				<div ng-show="custInfo.list.userGroup.length==0">
+					<h1>PERSONAL INFORMATION <button ng-click="custInfo.editAddress(custInfo.list.user.Phone);isEditing = !isEditing" ng-show="!isEditing">EDIT</button></h1>
+				</div>
+				<div ng-show="custInfo.list.userGroup.length>0">
+					<h1>CORPORATE ACCOUNT INFORMATION <button ng-click="custInfo.editAddress(custInfo.list.user.Phone);isEditing = !isEditing" ng-show="!isEditing">EDIT</button></h1>
+				</div>
 				<form name="CustEditForm" ng-submit="custInfo.Submit()" novalidate>
 					<div class="info-blk form-group col-md-12 cust-form">
 						<p class="col-md-3 cust-del">Email Address:</p>
@@ -12,6 +16,7 @@
 						<input ng-show="isEditing" type="email" class="form-control col-md-6" ng-model="custInfo.list.user.Email" placeholder="email">
 						
 					</div>
+					<p class="cust-top col-md-12" ng-if="custInfo.list.userGroup.length>0">Primary Account Holder</p>
 					<div class="info-blk form-group col-md-12">
 						<p class="col-md-3 cust-del">First Name:</p>
 						
@@ -40,11 +45,19 @@
 							<span ng-show="!isEditing">{{custInfo.list.defaultAddr[0].Street1}} {{custInfo.list.defaultAddr[0].Street2}} {{custInfo.list.defaultAddr[0].City}}</span>
 							<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].Street1" placeholder="Street1" ng-blur="custInfo.getLocation()" required>
 							<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].Street2" placeholder="Street2">
-							<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].City" placeholder="City" readonly>
+							<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].City" placeholder="City" ng-if="custInfo.list.defaultAddr[0].MultipleCities.length <= 1 || !custInfo.list.defaultAddr[0].MultipleCities" />
+							<div uib-dropdown class="form-control " id="MultipleCities" ng-if="custInfo.list.defaultAddr[0].MultipleCities.length > 1">
+								<div id="sort-dropdown" uib-dropdown-toggle>	
+									<p class="sort-active-show" ng-init="custInfo.list.defaultAddr[0].City = 'Select City'">{{custInfo.list.defaultAddr[0].City}}</p>
+								</div>
+								<ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="sort-dropdown">
+									<li ng-repeat="city in custInfo.list.defaultAddr[0].MultipleCities" ng-click="custInfo.list.defaultAddr[0].City=city"><a href="">{{city}}</a></li>
+								</ul>
+							</div>
 							<div>
 								<span ng-show="!isEditing">{{custInfo.list.defaultAddr[0].State}} {{custInfo.list.defaultAddr[0].Country}} {{custInfo.list.defaultAddr[0].Zip}}</span>
-								<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].State" placeholder="State" readonly>
-								<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].Country" placeholder="Country" readonly>
+								<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].State" placeholder="State">
+								<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].Country" placeholder="Country">
 								<input type="text" ng-show="isEditing" ng-model="custInfo.list.defaultAddr[0].Zip" ng-blur="custInfo.getLocation()" placeholder="Zip" required>
 							</div>
 						</div>
@@ -57,6 +70,11 @@
 							<input type="number" ng-show="isEditing" placeholder="Prefix" ng-model="custInfo.list.user.contact.Phone2" max-length="3" class="col-md-3 phone-val">
 							<input type="number" ng-show="isEditing" placeholder="Number" ng-model="custInfo.list.user.contact.Phone3" max-length="4" class="col-md-3 phone-val">
 							
+						</div>
+						<div class="info-blk" ng-if="custInfo.list.userGroup.length>0">
+							<p class="col-md-3">Tax Exempt Number:</p>
+							<span ng-show="!isEditing" class="col-md-6">{{custInfo.list.user.xp.TaxExemption.TaxExemptionID}}</span>
+							<input type="text" ng-show="isEditing" value="" class="col-md-6 phone-val1">
 						</div>
 			        <div class="form-group" ng-show="isEditing">
 						<button type="submit" class="save" ng-disabled="CustEditForm.$invalid" ng-click="isEditing = !isEditing">Save</button>			
@@ -73,14 +91,7 @@
 					<ul ng-repeat="address in custInfo.list.addresses">
 						<li>
 							<p>{{address.FirstName}} {{address.LastName}}</p>
-							<p class="sub-addr">{{address.Street1}}</p>
-							<p class="sub-addr">{{address.Street2}}</p>
-							<p class="group-addr">
-								<span class="sub-addr">{{address.City}}</span>
-								<span class="sub-addr">{{address.State}}</span>
-								<span class="sub-addr">{{address.Country}}</span>
-								<span class="sub-addr">{{address.Zip}}</span>
-							</p>
+							<p class="sub-addr">{{address.Street1}}, {{address.Street2}}, {{address.City}}, {{address.State}}, {{address.Country}}, {{address.Zip}}</p>
 						</li>
 					</ul>
 				</div>
@@ -132,7 +143,8 @@
 					<h3>EARNED TO DATE:<span>{{custInfo.spendingAcc.purple.xp.EarnedToDate | currency}}</span></h3>
 				</div>
 			</div>
-			<h4>POINTS EARNED:<span>{{custInfo.spendingAcc.purple.xp.PointsEarned}}</span></h4>
+			<!-- <h4>POINTS EARNED:<span>{{custInfo.spendingAcc.purple.xp.PointsEarned}}</span></h4> -->
+			<h4>POINTS EARNED:<span>{{custInfo.spendingAcc.purple.xp.LoyaltyPointsBalance}}</span></h4>
 			<h5>CURRENT BALANCE:<span>{{custInfo.spendingAcc.purple.Balance | currency}}</span></h5>
 			<p>(EXPIRES: <span>{{custInfo.spendingAcc.purple.EndDate | date:'MM/dd/yyyy'}}<span>)</p>
 		</div>
@@ -147,9 +159,9 @@
 				</div>
 				<div>
 					<p>Billing Address:</p>
-					<p class="sub-addr">{{custInfo.list.user.FirstName}} {{custInfo.list.user.LastName}}</p>
-					<p class="sub-addr">{{custInfo.list.defaultAddr[0].Street1}}, {{custInfo.list.defaultAddr[0].Street2}}, {{custInfo.list.defaultAddr[0].City}}</p>
-					<p class="sub-addr">{{custInfo.list.defaultAddr[0].State}}, {{custInfo.list.defaultAddr[0].Country}} {{custInfo.list.defaultAddr[0].Zip}}</p>
+					<p class="sub-addr">{{creditCard.billing.FirstName}} {{creditCard.billing.LastName}}</p>
+					<p class="sub-addr">{{creditCard.billing.Street1}}, {{creditCard.billing.Street2}}, {{creditCard.City}}</p>
+					<p class="sub-addr">{{creditCard.billing.State}}, {{creditCard.billing.Country}} {{creditCard.billing.Zip}}</p>
 				</div>
 <!-- 				<button ng-click='paymentEdit = !paymentEdit' ng-show="!paymentEdit">Edit</button>
 				<button>Delete</button> -->
@@ -190,7 +202,24 @@
 				<button ng-click='paymentEdit = !paymentEdit' ng-show="!paymentEdit">cancel</button>
 			</div>  -->
 		</div>
-		<div class="account-credits col-sm-12 col-xs-12 col-md-12 col-lg-12">
+		<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 corporate-info" ng-if="custInfo.list.userGroup.length>0">
+			<h1>CORPORATE CHARGE INFORMATION  <button>EDIT</button></h1>
+			<div class="left">
+				<p>Charge Limit</p>
+				<p class="sub-addr">$1000.00</p>
+				<p>Company</p>
+				<p class="sub-addr">Wells Fargo</p>
+			</div>
+			<div class="right">
+				<p>Amount Owed</p>
+				<p class="sub-addr">$1000.00</p>
+				<p>Authorized Users</p>
+				<p class="sub-addr">Janet Smith</p>
+				<p class="sub-addr">Mark Smith</p>
+				<p class="sub-addr">Thomas Smith</p>
+			</div>
+		</div>
+		<div class="account-credits col-sm-12 col-xs-12 col-md-12 col-lg-12" ng-if="custInfo.list.userGroup.length==0">
 			<h1>ACCOUNT CREDITS</h1>
 			<h2>CREDIT BALANCE: <span>{{custInfo.spendingAcc.charges.Balance | currency}}</span></h2>
 		</div>
@@ -199,22 +228,20 @@
 			<p>Free Shipping</p>
 			<p class="sub-addr">Lorem lpsum dolor sit amet</p>
 		</div> -->
+		<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" ng-if="custInfo.list.user.xp.PO.PORequired=='Yes'">
+			<h1>Change Number</h1>
+			<a ng-click="custInfo.showPOModal=true">Change PO Number</a>
+		</div>
 		<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
 			<h1>ORDER HISTORY</h1>
 			<a ui-sref="orderHistory({userID:custInfo.list.user.ID, name:custInfo.list.user.FirstName})">View Order History</a>
 		</div>
 	</div>
-	<modal title="Choose a Security Question" visible="showModal" class="change-pwd modal-pop-up">
+	<modal title="Security Question" visible="showModal" class="change-pwd modal-pop-up">
 		<form name="myForm" ng-submit="ok()" >
 				<div class="form-group security-qtn-block">
-                  <label for="security-select">Choose a Security Question</label>
-               <!--    <select class="form-control" id="security-select">
-                     <option value="Select a Security Question">Select a Security Question</option>
-                     <option value="What was your childhood nickname?">What was your childhood nickname?</option>
-                     <option value="What was the name of the hospital where you were born?">What was the name of the hospital where you were born?</option>
-                     <option value="What is your favorite movie?">What is your favorite movie?</option>
-                  </select> -->
- 				  <div uib-dropdown class="form-control " id="security-select2">
+                  <label for="security-select">Security Question:</label>
+<!--  				  <div uib-dropdown class="form-control " id="security-select2">
                      <div id="sort-dropdown" uib-dropdown-toggle>
                      <p class="sort-active-show">Select a Security Question</p></div>
                      <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="sort-dropdown">
@@ -239,11 +266,35 @@
                         </li>
                      </ul>
                      
-                  </div>
-                  <input type="text" class="form-control" placeholder="Enter Your Answer">
+                  </div> -->
+				  <input type="text" class="form-control" ng-model="custInfo.list.user.xp.SecurityQuestion.Question" readonly>
+				  <label for="security-select">Answer:</label>
+                  <input type="text" class="form-control" ng-model="custInfo.list.user.xp.SecurityQuestion.Answer" readonly>
+				  <label for="security-select">Email:</label>
+				  <input type="text" class="form-control" ng-model="custInfo.list.user.Email" readonly>
                </div>
 			<div class="form-group">
                   <button type="submit" class="save">SEND</button>
+            </div>
+		</form>
+	</modal>
+	<modal title="Change PO Number" visible="custInfo.showPOModal" class="change-pwd modal-pop-up">
+		<form name="POForm" ng-submit="custInfo.UpdatePONumber()" novalidate>
+			<div class="form-group security-qtn-block">
+				<input type="text" class="form-control" ng-model="custInfo.PoNo" required placeholder="Current PO Number">
+		   </div>
+		   <div class="form-group security-qtn-block">
+				<input type="text" class="form-control" ng-model="custInfo.NPoNo" required placeholder="New PO Number">
+		   </div>
+		   <div class="form-group security-qtn-block">
+				<input type="text" class="form-control" ng-model="custInfo.CPoNo" required placeholder="Confirm PO Number">
+		   </div>
+		   <div class="form-group security-qtn-block">
+				<span ng-if="custInfo.PoNotMatches==false">Confirm PO Not Matches...!</span>
+				<span ng-if="custInfo.ValidPO==false">PO Number is not valid...!</span>
+		   </div>
+			<div class="form-group">
+                <button type="submit" ng-disabled="POForm.invalid" class="update">Update</button>
             </div>
 		</form>
 	</modal>
