--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -1,5 +1,68 @@
 	.container-fluid.home-template{
-
+		.modal-pop-up.promotionsModal .modal-dialog{
+			width:97% !important;
+			.modal-body{
+				position:static !important;
+				background-color:@color20;
+				padding:10px 2% 10px 2%;
+				max-height:450px;
+				height:450px;
+				.promo-main{
+					position:absolute;
+					top:70px;
+					width:98%;
+					bottom:30px;
+					overflow-y:auto;
+					padding-right:1%;
+					.promotion_box{
+						width:19%;
+						margin-bottom:5px;
+					}
+				}
+				.promo-pagination{
+					width:95.5%;
+					position:absolute;
+					bottom:0;
+					height:30px;
+				}
+				.pagination{
+					margin:8px 0 0 0;
+					float:right;
+					li {
+						a{
+							padding:2px 10px;
+							font-size:12px;
+							.helvetica-medium;
+							color:@primary-dark-color;
+						}
+						&:last-child a, &:first-child a{
+							font-size:15px;
+							padding:0 10px;
+							background-color:@green-hover;
+							color:@color0;
+						}
+					}
+					.active{
+						a{
+							background-color:@primary-dark-color;
+							color:@color0;
+							border-color:@base-bg-purple-light;
+						}
+					}
+					&:hover{
+						color:@primary-dark-color;
+					}
+				}
+			}
+			.modal-header{
+				h4{
+					margin-top:0;
+				}
+			}
+		}
+		.promotion_wrapper{
+			padding-right:2px;
+		}
 	}
 	
 	.admin-all-products-view {
@@ -1528,6 +1591,7 @@ be a descendant of the grid when it is being dragged.
 	   }
 		.modal-body{
 		  padding: 0px;
+		  max-height:500px;
 		    .calendar{
 			.fc-toolbar {
 				margin: 0;
@@ -1613,8 +1677,7 @@ be a descendant of the grid when it is being dragged.
 				}
 			}
 		}	
-				}
-			
+			}
 		}	
 	}
 }
