--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -9,18 +9,13 @@
 	<!-- <button ng-click="home.goToAlgoliaResultsPage(home.searchTerm)">frtger</button> -->
 <!-- 		<h1 class="heading">Promotions & Information</h1>
 		<div ng-repeat="PromoInfo in home.PromoInformation" ng-include="PromoInfo"></div>	 -->
-
+<!--
 		<h1 class="heading">Workshop &amp; Events</h1>
-
 		<div ng-repeat="eventInfo in events | limitTo : 5">
 			<div class="promotion_box ng-scope" ui-sref="buildOrder({ID:eventInfo.id,SearchType:'Workshop'})">
 				<h1>{{eventInfo.title}}</h1>
 				<p>{{eventInfo.description}}</p>
 				<p class="more-details">More details</p>
-				
-				  <!--  <img src="../../assets/images/icons-svg/calendar.svg" alt="">
-					<p>{{eventInfo.start | date:'mediumDate'}}</p>
-					<span>{{eventInfo.startTime}}</span> -->
 					<div class="events-date">
 						<div class="event-date">{{eventInfo.start | date:'dd'}}<span class="ng-binding">{{eventInfo.start | date:'MMM'}}</span>
 							<span class="event-day ng-binding">{{eventInfo.start | date:'EEEE'}}</span>
@@ -43,11 +38,39 @@
 					</div>
 				
 			</div>
+		</div> -->
+		<h1 class="heading">Promotions &amp; Information</h1>
+		<div ng-repeat="promoLst in home.promotionsList | limitTo : 5">
+			<div class="promotion_box ng-scope">
+				<h1>{{promoLst.Name}}</h1>
+				<p>{{promoLst.Description}}</p>
+				<p class="more-details"></p>
+					<div class="promo-date">
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 viewBox="0 0 33 36" style="enable-background:new 0 0 33 36;" xml:space="preserve">
+						<g>
+							<path d="M0,10.2v20c0,2.7,2.2,4.9,4.9,4.9H28c2.7,0,4.9-2.2,4.9-4.9v-20c0-2.7-2.2-4.9-4.9-4.9h-1v-3
+								c0-0.8-0.7-1.5-1.5-1.5c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3h-2.6v-3c0-0.8-0.7-1.5-1.5-1.5
+								c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3h-2.6v-3c0-0.8-0.7-1.5-1.5-1.5
+								c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3C2.2,5.3,0,7.5,0,10.2z M29.4,29.6
+								c0,0.9-0.7,1.6-1.6,1.6H5.4c-0.9,0-1.6-0.7-1.6-1.6V16.7h25.6L29.4,29.6z"/>
+							<path d="M19.2,29h-7l2.8-3.7c0.3-0.4,0.6-0.8,0.8-1.1c0.2-0.3,0.4-0.6,0.5-0.9c0.2-0.5,0.4-1,0.4-1.5
+								c0-0.3-0.1-0.5-0.2-0.7c-0.1-0.2-0.3-0.2-0.5-0.2c-0.4,0-0.7,0.4-0.7,1.2c0,0,0,0.1,0,0.2c0,0.1,0,0.1,0,0.2h-2.7l0-0.4
+								c0-1,0.3-1.8,0.9-2.5c0.6-0.6,1.5-0.9,2.4-0.9c1,0,1.7,0.3,2.3,0.9c0.6,0.6,0.9,1.4,0.9,2.4c0,0.8-0.2,1.6-0.6,2.3
+								c-0.2,0.4-0.5,0.8-0.8,1.2c-0.3,0.4-0.7,0.8-1.2,1.3c0.4-0.1,0.8-0.2,1.2-0.2c0.4,0,0.8-0.1,1.3-0.1L19.2,29L19.2,29z"/>
+						</g>
+						</svg>
+						<div class="promo">
+							<span>{{promoLst.StartDate | date:'MMM'}} {{promoLst.StartDate | date:'dd'}} - {{promoLst.ExpirationDate | date:'MMM'}} {{promoLst.ExpirationDate | date:'dd'}}</span>
+						</div>
+					</div>
+			</div>
 		</div>
-
-
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 view-cal">
-			<button ng-click="saveCalendar()">View Calender</button>
+			<a ng-click="viewpromotions()">View All</a>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 view-cal">
+			<button ng-click="saveCalendar()">Workshop &amp; Events calendar</button>
 		</div>
 		<!--Order on hold starts here -->
 		<div class="col-sm-12 orders_on_hold">
@@ -72,8 +95,40 @@
 		</div>
 	</script> -->
 	<modal title="Save Order For Later" visible="home.showcalendarModal" id="calendarmodal" class="modal-pop-up calendarModal">
-		
-		<div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources" style="width:100%"></div> 
+		<div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources" style="width:100%" id="calendar"></div> 
+	</modal>
+	<modal title="Promotions &amp; Information" visible="home.showpromotionsmodal" id="promotions" class="modal-pop-up promotionsModal">
+		<div class="promo-main">
+			<div ng-repeat="promoLst in home.promotionsList" ng-if="($index < (home.page * 10)) && ($index >= ((home.page - 1) * 10))" >
+				<div class="promotion_box ng-scope">
+					<h1>{{promoLst.Name}}</h1>
+					<p>{{promoLst.Description}}</p>
+					<p class="more-details"></p>
+						<div class="promo-date">
+							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 viewBox="0 0 33 36" style="enable-background:new 0 0 33 36;" xml:space="preserve">
+							<g>
+								<path d="M0,10.2v20c0,2.7,2.2,4.9,4.9,4.9H28c2.7,0,4.9-2.2,4.9-4.9v-20c0-2.7-2.2-4.9-4.9-4.9h-1v-3
+									c0-0.8-0.7-1.5-1.5-1.5c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3h-2.6v-3c0-0.8-0.7-1.5-1.5-1.5
+									c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3h-2.6v-3c0-0.8-0.7-1.5-1.5-1.5
+									c-0.8,0-1.5,0.7-1.5,1.5v6c0,0.7-0.6,1.3-1.3,1.3c-0.7,0-1.3-0.6-1.3-1.3V5.3C2.2,5.3,0,7.5,0,10.2z M29.4,29.6
+									c0,0.9-0.7,1.6-1.6,1.6H5.4c-0.9,0-1.6-0.7-1.6-1.6V16.7h25.6L29.4,29.6z"/>
+								<path d="M19.2,29h-7l2.8-3.7c0.3-0.4,0.6-0.8,0.8-1.1c0.2-0.3,0.4-0.6,0.5-0.9c0.2-0.5,0.4-1,0.4-1.5
+									c0-0.3-0.1-0.5-0.2-0.7c-0.1-0.2-0.3-0.2-0.5-0.2c-0.4,0-0.7,0.4-0.7,1.2c0,0,0,0.1,0,0.2c0,0.1,0,0.1,0,0.2h-2.7l0-0.4
+									c0-1,0.3-1.8,0.9-2.5c0.6-0.6,1.5-0.9,2.4-0.9c1,0,1.7,0.3,2.3,0.9c0.6,0.6,0.9,1.4,0.9,2.4c0,0.8-0.2,1.6-0.6,2.3
+									c-0.2,0.4-0.5,0.8-0.8,1.2c-0.3,0.4-0.7,0.8-1.2,1.3c0.4-0.1,0.8-0.2,1.2-0.2c0.4,0,0.8-0.1,1.3-0.1L19.2,29L19.2,29z"/>
+							</g>
+							</svg>
+							<div class="promo">
+								<span>{{promoLst.StartDate | date:'MMM'}} {{promoLst.StartDate | date:'dd'}} - {{promoLst.ExpirationDate | date:'MMM'}} {{promoLst.ExpirationDate | date:'dd'}}</span>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+		<div class="promo-pagination">
+			<uib-pagination total-items="totalItems" data-ng-model="currentPage" previous-text="&lsaquo;" next-text="&rsaquo;" items-per-page="itemsPerPage" ng-change="home.setPagingData(currentPage)"></uib-pagination>
+		</div>
 	</modal>
 	</div>
 </div>
